apparently the "canplay" event listener isn't being called correctly on Mobile WebKit. I thought I had a workaround with "play/pause" but no luck :(

--- a/rplite.scss
+++ b/rplite.scss
@@ -7,7 +7,7 @@ figure		 	 							 	{ text-align: center; width:0px; height:125px; float:left; }
 figcaption 									{	margin: 10px; display: block; width: 70px; overflow: hidden; clear:both; }
 .logo				 							 	{ float:left; width:$s; height:$s; background:no-repeat; }                                                                     
 .speaker		 							 	{ margin: -2px 0px 0px 5px; width:inherit; height:inherit; background:url(img/speaker.svg) no-repeat; display:none; }                  
-audio 			 							 	{ display:none; }
+
 
 /*.rfm { background-image:url(rfm.png); }
 .europe1 { background-image:url(europe1.png); }
